# SQE_CourseProject

./: CMakeLists.txt
include/: BFS.h  Dijkstra.h
src/: BFS.cpp  Dijkstra.cpp  main.cpp
test/: test_BFS.cpp  test_Dijkstra.cpp
